6915365: 3/4 assert(false,"Unsupported VMGlobal Type") at management.cpp:1540

Remove assert to decouple JDK and HotSpot additions of known types.

Reviewed-by: mchung